// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uni_modules playground uni-app-x build:app-android 1`] = `"logo-46719607.png"`;

exports[`uni_modules playground uni-app-x build:app-android 2`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      },
      "apis": [
        "uni.getSystemInfo"
      ],
      "components": [
        "text",
        "image"
      ],
      "modules": [
        "uni-getSystemInfo"
      ]
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x build:app-android 3`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
import io.dcloud.uniapp.extapi.getSystemInfo as uni_getSystemInfo;
open class ComponentsTestCom11TestCom11 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {
        onLoad(fun(_: OnLoadOptions) {
            uni_getSystemInfo(GetSystemInfoOptions(success = fun(res) {
                console.log(res);
            }
            ));
            if ("production" === "development") {
                console.log("development");
            }
            if ("production" === "production") {
                console.log("production");
            }
        }
        , instance);
    }
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.logo), 1),
            createElementVNode("image", utsMapOf("src" to \`default\`))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var logo: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com1-1", "logo" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom11TestCom11Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x build:app-android 4`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom12TestCom12 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text2"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.logo), 1),
            createElementVNode("image", utsMapOf("src" to \`default\`))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var logo: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com1-2", "logo" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom12TestCom12Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x build:app-android 5`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
val \`default\` = "/uni_modules/test-com1/assets/logo-46719607.png";
val ComponentsTestCom11TestCom11Class = CreateVueComponent(ComponentsTestCom11TestCom11::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom11TestCom11.inheritAttrs, inject = ComponentsTestCom11TestCom11.inject, props = ComponentsTestCom11TestCom11.props, propsNeedCastKeys = ComponentsTestCom11TestCom11.propsNeedCastKeys, emits = ComponentsTestCom11TestCom11.emits, components = ComponentsTestCom11TestCom11.components, styles = ComponentsTestCom11TestCom11.styles);
}
, fun(instance): ComponentsTestCom11TestCom11 {
    return ComponentsTestCom11TestCom11(instance);
}
);
val ComponentsTestCom12TestCom12Class = CreateVueComponent(ComponentsTestCom12TestCom12::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom12TestCom12.inheritAttrs, inject = ComponentsTestCom12TestCom12.inject, props = ComponentsTestCom12TestCom12.props, propsNeedCastKeys = ComponentsTestCom12TestCom12.propsNeedCastKeys, emits = ComponentsTestCom12TestCom12.emits, components = ComponentsTestCom12TestCom12.components, styles = ComponentsTestCom12TestCom12.styles);
}
, fun(instance): ComponentsTestCom12TestCom12 {
    return ComponentsTestCom12TestCom12(instance);
}
);
"
`;

exports[`uni_modules playground uni-app-x build:app-android 6`] = `"api-ce31e859.png"`;

exports[`uni_modules playground uni-app-x build:app-android 7`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      },
      "apis": [],
      "components": [
        "text",
        "image",
        "video"
      ],
      "modules": [
        "uni-video"
      ]
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x build:app-android 8`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom21TestCom21 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.api), 1),
            createElementVNode("image", utsMapOf("src" to _ctx.api), null, 8, utsArrayOf(
                "src"
            )),
            createElementVNode("video")
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var api: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com2-1", "api" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom21TestCom21Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x build:app-android 9`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom22TestCom22 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text2"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.api), 1),
            createElementVNode("image", utsMapOf("src" to _ctx.api), null, 8, utsArrayOf(
                "src"
            ))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var api: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com2-2", "api" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom22TestCom22Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x build:app-android 10`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
val \`default\` = "/uni_modules/test-com2/assets/api-ce31e859.png";
val ComponentsTestCom21TestCom21Class = CreateVueComponent(ComponentsTestCom21TestCom21::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom21TestCom21.inheritAttrs, inject = ComponentsTestCom21TestCom21.inject, props = ComponentsTestCom21TestCom21.props, propsNeedCastKeys = ComponentsTestCom21TestCom21.propsNeedCastKeys, emits = ComponentsTestCom21TestCom21.emits, components = ComponentsTestCom21TestCom21.components, styles = ComponentsTestCom21TestCom21.styles);
}
, fun(instance): ComponentsTestCom21TestCom21 {
    return ComponentsTestCom21TestCom21(instance);
}
);
val ComponentsTestCom22TestCom22Class = CreateVueComponent(ComponentsTestCom22TestCom22::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom22TestCom22.inheritAttrs, inject = ComponentsTestCom22TestCom22.inject, props = ComponentsTestCom22TestCom22.props, propsNeedCastKeys = ComponentsTestCom22TestCom22.propsNeedCastKeys, emits = ComponentsTestCom22TestCom22.emits, components = ComponentsTestCom22TestCom22.components, styles = ComponentsTestCom22TestCom22.styles);
}
, fun(instance): ComponentsTestCom22TestCom22 {
    return ComponentsTestCom22TestCom22(instance);
}
);
fun test() {}
"
`;

exports[`uni_modules playground uni-app-x build:app-ios 1`] = `
"import { defineComponent, openBlock, createElementBlock, Fragment, createElementVNode, toDisplayString } from 'vue';
import Logo from './test-com1/components/test-com1-1/logo.png';
import '@dcloudio/uni-app';
import _export_sfc from 'plugin-vue:export-helper';

const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com1-1",
      logo: Logo
    };
  },
  onLoad() {
    uni.getSystemInfo({
      success: function(res) {
        uni.__log__("log", "at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:17", res);
      }
    });
    {
      uni.__log__("log", "at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:24", "production");
    }
  }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1),
    createElementVNode("image", { src: Logo })
  ], 64);
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com1-2',
            logo: Logo
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text2" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1),
    createElementVNode("image", { src: Logo })
  ], 64);
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]]]);

export { testCom11 as TestCom11, testCom12 as TestCom12 };
"
`;

exports[`uni_modules playground uni-app-x build:app-ios 2`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x build:app-ios 3`] = `
"import { defineComponent, openBlock, createElementBlock, Fragment, createElementVNode, toDisplayString } from 'vue';
import Api from './test-com2/components/test-com2-1/api.png';
import _export_sfc from 'plugin-vue:export-helper';

function test() { }

const _sfc_main$1 = defineComponent({
    data() {
        return {
            msg: 'test-com2-1',
            api: Api
        };
    }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text" }, toDisplayString($data.msg) + toDisplayString($data.api), 1),
    createElementVNode("image", { src: $data.api }, null, 8, ["src"]),
    createElementVNode("video")
  ], 64);
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com2-2',
            api: Api
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text2" }, toDisplayString($data.msg) + toDisplayString($data.api), 1),
    createElementVNode("image", { src: $data.api }, null, 8, ["src"])
  ], 64);
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]]]);

export { testCom21 as TestCom21, testCom22 as TestCom22, test };
"
`;

exports[`uni_modules playground uni-app-x build:app-ios 4`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x build:h5 1`] = `
"



.text[data-v-9a3b2cd8] {
    color: red;
}
.image[data-v-9a3b2cd8] {
    background: url('@/uni_modules/test-com1/components/test-com1-1/logo.png');
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 2`] = `
"



.text2[data-v-3c9048c8] {
    color: red;
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 3`] = `
"import "@dcloudio/uni-components/style/text.css";
import { getSystemInfo, Text, Image } from "@dcloudio/uni-h5";
import "@dcloudio/uni-components/style/image.css";
import "@dcloudio/uni-components/style/resize-sensor.css";
import { defineComponent, openBlock, createElementBlock, Fragment, createVNode, withCtx, createTextVNode, toDisplayString } from "vue";
import Logo from "./test-com1/components/test-com1-1/logo.png";
import "@dcloudio/uni-app";
import _export_sfc from "plugin-vue:export-helper";
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com1-1",
      logo: Logo
    };
  },
  onLoad() {
    getSystemInfo({
      success: function(res) {
        console.log(res);
      }
    });
    {
      console.log("production");
    }
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: Logo })
  ], 64);
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-9a3b2cd8"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com1-2",
      logo: Logo
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text2" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: Logo })
  ], 64);
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-3c9048c8"]]);
export {
  testCom11 as TestCom11,
  testCom12 as TestCom12
};
"
`;

exports[`uni_modules playground uni-app-x build:h5 4`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x build:h5 5`] = `
"




.text[data-v-d600df3c] {
    color: red;
}
.image[data-v-d600df3c] {
    background: url('@/uni_modules/test-com2/components/test-com2-1/api.png');
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 6`] = `
"



.text2[data-v-09835a0e] {
    color: red;
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 7`] = `
"import "@dcloudio/uni-components/style/text.css";
import { Text, Image, Video } from "@dcloudio/uni-h5";
import "@dcloudio/uni-components/style/image.css";
import "@dcloudio/uni-components/style/resize-sensor.css";
import "@dcloudio/uni-h5/style/video.css";
import { defineComponent, openBlock, createElementBlock, Fragment, createVNode, withCtx, createTextVNode, toDisplayString } from "vue";
import Api from "./test-com2/components/test-com2-1/api.png";
import _export_sfc from "plugin-vue:export-helper";
function test() {
}
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com2-1",
      api: Api
    };
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  const _component_v_uni_video = Video;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.api), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: $data.api }, null, 8, ["src"]),
    createVNode(_component_v_uni_video)
  ], 64);
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-d600df3c"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com2-2",
      api: Api
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text2" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.api), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: $data.api }, null, 8, ["src"])
  ], 64);
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-09835a0e"]]);
export {
  testCom21 as TestCom21,
  testCom22 as TestCom22,
  test
};
"
`;

exports[`uni_modules playground uni-app-x build:h5 8`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:app-android 1`] = `"logo-46719607.png"`;

exports[`uni_modules playground uni-app-x dev:app-android 2`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      },
      "apis": [
        "uni.getSystemInfo",
        "uniCloud.importObject"
      ],
      "components": [],
      "modules": [
        "uni-getSystemInfo",
        "uni-cloud-client"
      ]
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:app-android 3`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
import io.dcloud.uniapp.extapi.getSystemInfo as uni_getSystemInfo;
open class ComponentsTestCom11TestCom11 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {
        onLoad(fun(_: OnLoadOptions) {
            uni_getSystemInfo(GetSystemInfoOptions(success = fun(res) {
                console.log(res, " at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:17");
            }
            ));
            if ("development" === "development") {
                console.log("development", " at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:21");
            }
            if ("development" === "production") {
                console.log("production", " at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:24");
            }
        }
        , instance);
    }
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.logo), 1),
            createElementVNode("image", utsMapOf("src" to \`default\`))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var logo: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com1-1", "logo" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom11TestCom11Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x dev:app-android 4`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom12TestCom12 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text2"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.logo), 1),
            createElementVNode("image", utsMapOf("src" to \`default\`))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var logo: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com1-2", "logo" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom12TestCom12Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x dev:app-android 5`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom1;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
val \`default\` = "/uni_modules/test-com1/assets/logo-46719607.png";
val ComponentsTestCom11TestCom11Class = CreateVueComponent(ComponentsTestCom11TestCom11::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom11TestCom11.inheritAttrs, inject = ComponentsTestCom11TestCom11.inject, props = ComponentsTestCom11TestCom11.props, propsNeedCastKeys = ComponentsTestCom11TestCom11.propsNeedCastKeys, emits = ComponentsTestCom11TestCom11.emits, components = ComponentsTestCom11TestCom11.components, styles = ComponentsTestCom11TestCom11.styles);
}
, fun(instance): ComponentsTestCom11TestCom11 {
    return ComponentsTestCom11TestCom11(instance);
}
);
val ComponentsTestCom12TestCom12Class = CreateVueComponent(ComponentsTestCom12TestCom12::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom12TestCom12.inheritAttrs, inject = ComponentsTestCom12TestCom12.inject, props = ComponentsTestCom12TestCom12.props, propsNeedCastKeys = ComponentsTestCom12TestCom12.propsNeedCastKeys, emits = ComponentsTestCom12TestCom12.emits, components = ComponentsTestCom12TestCom12.components, styles = ComponentsTestCom12TestCom12.styles);
}
, fun(instance): ComponentsTestCom12TestCom12 {
    return ComponentsTestCom12TestCom12(instance);
}
);
"
`;

exports[`uni_modules playground uni-app-x dev:app-android 6`] = `"api-ce31e859.png"`;

exports[`uni_modules playground uni-app-x dev:app-android 7`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      },
      "apis": [
        "uniCloud.importObject"
      ],
      "components": [],
      "modules": [
        "uni-cloud-client"
      ]
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:app-android 8`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom21TestCom21 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.api), 1),
            createElementVNode("image", utsMapOf("src" to _ctx.api), null, 8, utsArrayOf(
                "src"
            )),
            createElementVNode("video")
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var api: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com2-1", "api" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom21TestCom21Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x dev:app-android 9`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
open class ComponentsTestCom22TestCom22 : VueComponent {
    constructor(instance: ComponentInternalInstance) : super(instance) {}
    @Suppress("UNUSED_PARAMETER", "UNUSED_VARIABLE")
    override fun \`$render\`(): Any? {
        val _ctx = this;
        val _cache = this.\`$\`.renderCache;
        return createElementVNode(Fragment, null, utsArrayOf(
            createElementVNode("text", utsMapOf("class" to "text2"), toDisplayString(_ctx.msg) + toDisplayString(_ctx.api), 1),
            createElementVNode("image", utsMapOf("src" to _ctx.api), null, 8, utsArrayOf(
                "src"
            ))
        ), 64);
    }
    open var msg: String by \`$data\`;
    open var api: Any? by \`$data\`;
    @Suppress("USELESS_CAST")
    override fun data(): Map<String, Any?> {
        return utsMapOf("msg" to "test-com2-2", "api" to \`default\`);
    }
    companion object {
        val styles: Map<String, Map<String, Map<String, Any>>>
            get() {
                return normalizeCssStyles(ComponentsTestCom22TestCom22Styles);
            }
        var inheritAttrs = true;
        var inject: Map<String, Map<String, Any?>> = utsMapOf();
        var emits: Map<String, Any?> = utsMapOf();
        var props = normalizePropsOptions(utsMapOf());
        var propsNeedCastKeys: UTSArray<String> = utsArrayOf();
        var components: Map<String, CreateVueComponent> = utsMapOf();
    }
}
"
`;

exports[`uni_modules playground uni-app-x dev:app-android 10`] = `
"@file:Suppress("UNCHECKED_CAST", "USELESS_CAST", "INAPPLICABLE_JVM_NAME")
package uts.sdk.modules.testCom2;
import io.dcloud.uniapp.*;
import io.dcloud.uniapp.extapi.*;
import io.dcloud.uniapp.framework.*;
import io.dcloud.uniapp.runtime.*;
import io.dcloud.uniapp.vue.*;
import io.dcloud.uniapp.vue.shared.*;
import io.dcloud.unicloud.*;
import io.dcloud.uts.*;
import io.dcloud.uts.Map;
import io.dcloud.uts.Set;
import io.dcloud.uts.UTSAndroid;
import kotlinx.coroutines.CoroutineScope;
import kotlinx.coroutines.Deferred;
import kotlinx.coroutines.Dispatchers;
import kotlinx.coroutines.async;
val \`default\` = "/uni_modules/test-com2/assets/api-ce31e859.png";
val ComponentsTestCom21TestCom21Class = CreateVueComponent(ComponentsTestCom21TestCom21::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom21TestCom21.inheritAttrs, inject = ComponentsTestCom21TestCom21.inject, props = ComponentsTestCom21TestCom21.props, propsNeedCastKeys = ComponentsTestCom21TestCom21.propsNeedCastKeys, emits = ComponentsTestCom21TestCom21.emits, components = ComponentsTestCom21TestCom21.components, styles = ComponentsTestCom21TestCom21.styles);
}
, fun(instance): ComponentsTestCom21TestCom21 {
    return ComponentsTestCom21TestCom21(instance);
}
);
val ComponentsTestCom22TestCom22Class = CreateVueComponent(ComponentsTestCom22TestCom22::class.java, fun(): VueComponentOptions {
    return VueComponentOptions(type = "component", name = "", inheritAttrs = ComponentsTestCom22TestCom22.inheritAttrs, inject = ComponentsTestCom22TestCom22.inject, props = ComponentsTestCom22TestCom22.props, propsNeedCastKeys = ComponentsTestCom22TestCom22.propsNeedCastKeys, emits = ComponentsTestCom22TestCom22.emits, components = ComponentsTestCom22TestCom22.components, styles = ComponentsTestCom22TestCom22.styles);
}
, fun(instance): ComponentsTestCom22TestCom22 {
    return ComponentsTestCom22TestCom22(instance);
}
);
fun test() {}
"
`;

exports[`uni_modules playground uni-app-x dev:app-ios 1`] = `
"import { defineComponent, openBlock, createElementBlock, Fragment, createElementVNode, toDisplayString } from 'vue';
import Logo from './test-com1/components/test-com1-1/logo.png';
import '@dcloudio/uni-app';
import _export_sfc from 'plugin-vue:export-helper';

const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com1-1",
      logo: Logo
    };
  },
  onLoad() {
    uni.getSystemInfo({
      success: function(res) {
        uni.__log__("log", "at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:17", res);
      }
    });
    {
      uni.__log__("log", "at uni_modules/test-com1/components/test-com1-1/test-com1-1.vue:21", "development");
    }
  }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createElementVNode(
        "text",
        { class: "text" },
        toDisplayString($data.msg) + toDisplayString($data.logo),
        1
        /* TEXT */
      ),
      createElementVNode("image", { src: Logo })
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com1/components/test-com1-1/test-com1-1.vue"]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com1-2',
            logo: Logo
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createElementVNode(
        "text",
        { class: "text2" },
        toDisplayString($data.msg) + toDisplayString($data.logo),
        1
        /* TEXT */
      ),
      createElementVNode("image", { src: Logo })
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com1/components/test-com1-2/test-com1-2.vue"]]);

export { testCom11 as TestCom11, testCom12 as TestCom12 };
"
`;

exports[`uni_modules playground uni-app-x dev:app-ios 2`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:app-ios 3`] = `
"import { defineComponent, openBlock, createElementBlock, Fragment, createElementVNode, toDisplayString } from 'vue';
import Api from './test-com2/components/test-com2-1/api.png';
import _export_sfc from 'plugin-vue:export-helper';

function test() { }

const _sfc_main$1 = defineComponent({
    data() {
        return {
            msg: 'test-com2-1',
            api: Api
        };
    }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createElementVNode(
        "text",
        { class: "text" },
        toDisplayString($data.msg) + toDisplayString($data.api),
        1
        /* TEXT */
      ),
      createElementVNode("image", { src: $data.api }, null, 8, ["src"]),
      createElementVNode("video")
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com2/components/test-com2-1/test-com2-1.vue"]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com2-2',
            api: Api
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createElementVNode(
        "text",
        { class: "text2" },
        toDisplayString($data.msg) + toDisplayString($data.api),
        1
        /* TEXT */
      ),
      createElementVNode("image", { src: $data.api }, null, 8, ["src"])
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com2/components/test-com2-2/test-com2-2.vue"]]);

export { testCom21 as TestCom21, testCom22 as TestCom22, test };
"
`;

exports[`uni_modules playground uni-app-x dev:app-ios 4`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:h5 1`] = `
"



.text[data-v-07a142fd] {
    color: red;
}
.image[data-v-07a142fd] {
    background: url('@/uni_modules/test-com1/components/test-com1-1/logo.png');
}
"
`;

exports[`uni_modules playground uni-app-x dev:h5 2`] = `
"



.text2[data-v-e9ed06e5] {
    color: red;
}
"
`;

exports[`uni_modules playground uni-app-x dev:h5 3`] = `
"import "@dcloudio/uni-components/style/text.css";
import { getSystemInfo, Text, Image } from "@dcloudio/uni-h5";
import "@dcloudio/uni-components/style/image.css";
import "@dcloudio/uni-components/style/resize-sensor.css";
import { defineComponent, openBlock, createElementBlock, Fragment, createVNode, withCtx, createTextVNode, toDisplayString } from "vue";
import Logo from "./test-com1/components/test-com1-1/logo.png";
import "@dcloudio/uni-app";
import _export_sfc from "plugin-vue:export-helper";
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com1-1",
      logo: Logo
    };
  },
  onLoad() {
    getSystemInfo({
      success: function(res) {
        console.log(res);
      }
    });
    {
      console.log("development");
    }
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createVNode(_component_v_uni_text, { class: "text" }, {
        default: withCtx(() => [
          createTextVNode(
            toDisplayString($data.msg) + toDisplayString($data.logo),
            1
            /* TEXT */
          )
        ]),
        _: 1
        /* STABLE */
      }),
      createVNode(_component_v_uni_image, { src: Logo })
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-07a142fd"], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com1/components/test-com1-1/test-com1-1.vue"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com1-2",
      logo: Logo
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createVNode(_component_v_uni_text, { class: "text2" }, {
        default: withCtx(() => [
          createTextVNode(
            toDisplayString($data.msg) + toDisplayString($data.logo),
            1
            /* TEXT */
          )
        ]),
        _: 1
        /* STABLE */
      }),
      createVNode(_component_v_uni_image, { src: Logo })
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-e9ed06e5"], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com1/components/test-com1-2/test-com1-2.vue"]]);
export {
  testCom11 as TestCom11,
  testCom12 as TestCom12
};
"
`;

exports[`uni_modules playground uni-app-x dev:h5 4`] = `
"{
  "id": "test-com1",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;

exports[`uni_modules playground uni-app-x dev:h5 5`] = `
"




.text[data-v-86d335ce] {
    color: red;
}
.image[data-v-86d335ce] {
    background: url('@/uni_modules/test-com2/components/test-com2-1/api.png');
}
"
`;

exports[`uni_modules playground uni-app-x dev:h5 6`] = `
"



.text2[data-v-9332ef4d] {
    color: red;
}
"
`;

exports[`uni_modules playground uni-app-x dev:h5 7`] = `
"import "@dcloudio/uni-components/style/text.css";
import { Text, Image, Video } from "@dcloudio/uni-h5";
import "@dcloudio/uni-components/style/image.css";
import "@dcloudio/uni-components/style/resize-sensor.css";
import "@dcloudio/uni-h5/style/video.css";
import { defineComponent, openBlock, createElementBlock, Fragment, createVNode, withCtx, createTextVNode, toDisplayString } from "vue";
import Api from "./test-com2/components/test-com2-1/api.png";
import _export_sfc from "plugin-vue:export-helper";
function test() {
}
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com2-1",
      api: Api
    };
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  const _component_v_uni_video = Video;
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createVNode(_component_v_uni_text, { class: "text" }, {
        default: withCtx(() => [
          createTextVNode(
            toDisplayString($data.msg) + toDisplayString($data.api),
            1
            /* TEXT */
          )
        ]),
        _: 1
        /* STABLE */
      }),
      createVNode(_component_v_uni_image, { src: $data.api }, null, 8, ["src"]),
      createVNode(_component_v_uni_video)
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-86d335ce"], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com2/components/test-com2-1/test-com2-1.vue"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com2-2",
      api: Api
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createVNode(_component_v_uni_text, { class: "text2" }, {
        default: withCtx(() => [
          createTextVNode(
            toDisplayString($data.msg) + toDisplayString($data.api),
            1
            /* TEXT */
          )
        ]),
        _: 1
        /* STABLE */
      }),
      createVNode(_component_v_uni_image, { src: $data.api }, null, 8, ["src"])
    ],
    64
    /* STABLE_FRAGMENT */
  );
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-9332ef4d"], ["__file", "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/playground/uni_modules/src/uni_modules/test-com2/components/test-com2-2/test-com2-2.vue"]]);
export {
  testCom21 as TestCom21,
  testCom22 as TestCom22,
  test
};
"
`;

exports[`uni_modules playground uni-app-x dev:h5 8`] = `
"{
  "id": "test-com2",
  "version": "1.0.0",
  "uni_modules": {
    "artifacts": {
      "env": {
        "compilerVersion": "4.13"
      }
    }
  }
}"
`;
